src/objects/XO_Employee__c.object
<CustomObject>
    <description>Data repository for all individuals that move through Crossover&apos;s hiring and on boarding process</description>
    <fields>
        <fullName>ACLS_Certified__c</fullName>
        <inlineHelpText>Verify certification for MD and RN staff.</inlineHelpText>
        <label>ACLS Certified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Expiration__c</fullName>
        <inlineHelpText>Verify certification for MD and RN staff.</inlineHelpText>
        <label>ACLS Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_to_Arbitration_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement to Arbitration Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Salary__c</fullName>
        <description>Annual salary of the employee</description>
        <label>Annual Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arbitration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Arbitration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BBP_Training__c</fullName>
        <label>BBP Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLS_Certified__c</fullName>
        <inlineHelpText>Verify certification for all staff.</inlineHelpText>
        <label>BLS Certified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLS_Expiration__c</fullName>
        <inlineHelpText>Verify certification for all staff.</inlineHelpText>
        <label>BLS Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Background_Authorization_Complete_Date__c</fullName>
        <label>Background Authorization Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Background_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Background Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Background_Check_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Background Check Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Badge_Access_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Badge/Access Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Eligible__c</fullName>
        <label>Benefit Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bio_CV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bio / CV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_Certification_Expiration__c</fullName>
        <inlineHelpText>Verify for MD only.</inlineHelpText>
        <label>Board Certification Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Board_Certification__c</fullName>
        <inlineHelpText>Verify for MD only.</inlineHelpText>
        <label>Board Certification</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIAA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confidential Information and Assignment Agreement</description>
        <inlineHelpText>Confidential Information and Assignment Agreement</inlineHelpText>
        <label>CIAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CME_Credits__c</fullName>
        <label>CME Credits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSR_Expiration__c</fullName>
        <label>CSR Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSR__c</fullName>
        <label>CSR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURES_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CURES Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chest_Xray__c</fullName>
        <label>Chest Xray</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competency_Testing_Completed__c</fullName>
        <inlineHelpText>Indicate XO competency completed for all staff.</inlineHelpText>
        <label>Competency Testing Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competency_Testing_Next_Due__c</fullName>
        <label>Competency Testing Next Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidentiality Agreement Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consulting_Agrmt_for_contractors_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consulting Agrmt (for contractors only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Culture_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Culture Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEA_Expiration_Date__c</fullName>
        <inlineHelpText>Confirm DEA number for Medical Practitioners.</inlineHelpText>
        <label>DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA__c</fullName>
        <inlineHelpText>Confirm DEA number for Medical Practitioners.</inlineHelpText>
        <label>DEA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOT_Training_RN_Only__c</fullName>
        <label>DOT Training (RN Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Hire__c</fullName>
        <label>Date of Hire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Reference_Check_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date of Reference Check #1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Reference_Check_2__c</fullName>
        <label>Date of Reference Check #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Effective_Date__c</fullName>
        <label>Dental Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Insurance__c</fullName>
        <label>Dental Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Number__c</fullName>
        <label>Drivers License Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_License_State__c</fullName>
        <label>Drivers License State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dropbox_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dropbox Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_Verified__c</fullName>
        <inlineHelpText>Verify education and training of all staff.</inlineHelpText>
        <label>Education Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <label>Emergency Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_First_Name__c</fullName>
        <label>Employee First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Last_Name__c</fullName>
        <label>Employee Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Middle_Name__c</fullName>
        <label>Employee Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Preferred_Name__c</fullName>
        <label>Employee Preferred Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Agreement_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employment Agreement Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employment Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Agrmt_Attmt_A_MD_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employment Agrmt &amp; Attmt A (MD Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Leave of Absence</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Non Exempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Time_Equivalent__c</fullName>
        <label>Full Time Equivalent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Time_Equivalent_old__c</fullName>
        <label>Full Time Equivalent (old)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time +20</fullName>
                </value>
                <value>
                    <fullName>Part Time -20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HIPAA_Training__c</fullName>
        <label>HIPAA Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HIPAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HIPAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSA_Employee_Contribution__c</fullName>
        <label>HSA (Employee Contribution)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSA__c</fullName>
        <label>HSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Harassment_Training_Completed__c</fullName>
        <label>Harassment Training Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Harassment_Training_Next_Due__c</fullName>
        <label>Harassment Training Next Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hardware__c</fullName>
        <label>Hardware</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HazCom_Training__c</fullName>
        <label>HazCom Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hep_B_Administered__c</fullName>
        <description>Dated Hep B test was administered.</description>
        <label>Hep B Administered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hep_B_Vaccine__c</fullName>
        <label>Hep B Vaccine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vaccinated</fullName>
                </value>
                <value>
                    <fullName>Positive Titer</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Address_2__c</fullName>
        <description>2nd address line</description>
        <label>Home Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <label>Home City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Email__c</fullName>
        <label>Home Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_State__c</fullName>
        <label>Home State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Street_Address__c</fullName>
        <label>Home Street Address</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Zipcode__c</fullName>
        <label>Home Zipcode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <description>Hourly wage paid to employee.</description>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>I9_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I9 Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IIPP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illness &amp; Injury Prevention</description>
        <inlineHelpText>Illness &amp; Injury Prevention</inlineHelpText>
        <label>IIPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_9_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I-9 Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Influenza_Vaccine_Administered__c</fullName>
        <description>Date influenza vaccine was completed.</description>
        <label>Influenza Vaccine Administered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Influenza_Vaccine_Next_Due__c</fullName>
        <label>Influenza Vaccine Next Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Application_for_Privileges__c</fullName>
        <inlineHelpText>Record initial application for privileges (e.g. MD, Chiro, Acu, PT and all other licensed practitioners).</inlineHelpText>
        <label>Application for Privileges</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job / Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acupuncturist</fullName>
                </value>
                <value>
                    <fullName>Behavioral Coach</fullName>
                </value>
                <value>
                    <fullName>Chiropractor</fullName>
                </value>
                <value>
                    <fullName>Client Manager</fullName>
                </value>
                <value>
                    <fullName>Clinic Manager</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Corporate Staff</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Exercise Physiologist / Specialist</fullName>
                </value>
                <value>
                    <fullName>Health Coach</fullName>
                </value>
                <value>
                    <fullName>Host</fullName>
                </value>
                <value>
                    <fullName>HR Manager</fullName>
                </value>
                <value>
                    <fullName>IT Specialist</fullName>
                </value>
                <value>
                    <fullName>Massage Therapist</fullName>
                </value>
                <value>
                    <fullName>Nurse (LVN)</fullName>
                </value>
                <value>
                    <fullName>Nurse (RN)</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Optometrist</fullName>
                </value>
                <value>
                    <fullName>Optometry Assistant</fullName>
                </value>
                <value>
                    <fullName>PA / NP</fullName>
                </value>
                <value>
                    <fullName>Phlebotomist</fullName>
                </value>
                <value>
                    <fullName>Physical Therapist</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Registered Dietician</fullName>
                </value>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensed_Verified_Board_Website__c</fullName>
        <inlineHelpText>Verify all licensed practitioners (i.e., all staff except Hosts).</inlineHelpText>
        <label>Licensed Verified (Board Website)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lumeris_Credentials__c</fullName>
        <label>Lumeris Credentials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lumeris_Provider_Form_providers_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lumeris Provider Form (providers only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMR_Administered__c</fullName>
        <label>MMR Administered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMR_Vaccine__c</fullName>
        <label>MMR Vaccine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vaccinated</fullName>
                </value>
                <value>
                    <fullName>Positive Titers</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager Old</label>
        <referenceTo>Managers__c</referenceTo>
        <relationshipLabel>XO Employee</relationshipLabel>
        <relationshipName>XO_Employee_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of employee</description>
        <label>Manager</label>
        <referenceTo>XO_Employee__c</referenceTo>
        <relationshipLabel>XO Employee</relationshipLabel>
        <relationshipName>XO_Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Effective_Date__c</fullName>
        <label>Medical Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Insurance__c</fullName>
        <label>Medical Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_License_Expiration__c</fullName>
        <inlineHelpText>Verify all licensed practitioners (i.e., all staff except Hosts).</inlineHelpText>
        <label>Medical License Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_License_Number__c</fullName>
        <description>Medical license number for licensed providers including, doctors, nurses, chiropractors, acupuncturists, physical therapists, and any other licensed or credentialed staff.</description>
        <inlineHelpText>Verify all licensed practitioners (i.e., all staff except Hosts).</inlineHelpText>
        <label>Medical License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Licenses_Other_States__c</fullName>
        <description>If a Provider has medical licenses in other states, please select all states that apply.</description>
        <label>Medical Licenses (Other States)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>N95_Mask_Fitting__c</fullName>
        <description>OSHA requirement for fitting N95 mask.</description>
        <label>N95 Mask Fitting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI_Expiration__c</fullName>
        <inlineHelpText>Confirm NPI for MD, Chiro, Acu, PT, and any other licensed practitioners.</inlineHelpText>
        <label>NPI Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <inlineHelpText>Confirm NPI for MD, Chiro, Acu, PT, and any other licensed practitioners.</inlineHelpText>
        <label>NPI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_95_Respiratory_Fit_Testing__c</fullName>
        <label>N-95 Respiratory Fit Testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Application_for_Privileges__c</fullName>
        <label>Next Application for Privileges</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OIG_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OIG Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPD_Clearance__c</fullName>
        <label>PPD Clearance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPD_Completed__c</fullName>
        <label>PPD Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPD_Next_Due__c</fullName>
        <description>Next date PPD must be completed by.</description>
        <label>PPD Next Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPD_Record_Attached__c</fullName>
        <label>PPD Record Attached?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>